# example-selector

./: .gitignore  EXECUTION.md  PRD.md  README.md  env.example  pyproject.toml
docs/superpowers/plans/: 2026-05-24-travel-assistant-examples.md
docs/superpowers/specs/: 2026-05-24-travel-assistant-examples-design.md
example_selector/: __init__.py
example_selector/adk/: __init__.py  agent.py  helpers.py  plugin.py  provider.py
example_selector/core/: __init__.py  config.py  models.py  store.py
example_selector/langchain/: __init__.py  selector.py
example_selector/langgraph/: __init__.py  helpers.py
examples/_shared/: load.py
examples/adk_travel_assistant/: README.md  agent.py  run.py  test_injection.py
examples/data/: travel_examples.json
examples/langchain_travel_assistant/: README.md  agent.py  run.py  test_injection.py
examples/langgraph_travel_assistant/: README.md  agent.py  run.py  test_injection.py
tests/: conftest.py
tests/test_adk/: test_agent.py  test_helpers.py  test_integration.py  test_plugin.py
tests/test_core/: test_config.py  test_models.py  test_store.py
tests/test_functional/: test_adk_usage.py  test_langchain_usage.py
tests/test_langchain/: test_integration.py  test_selector.py
tests/test_langgraph/: test_helpers.py  test_integration.py
